capsule animation
